--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ jdk: openjdk8
 cache:
   directories:
     - $HOME/.m2
+
+script: "mvn cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
