--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,18 @@
                         <nohelp>true</nohelp>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>2.7</version>
+                    <configuration>
+                        <formats>
+                            <format>html</format>
+                            <format>xml</format>
+                        </formats>
+                        <check />
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
